--- a/spring-boot-fun-starter/src/main/resources/application.properties
+++ b/spring-boot-fun-starter/src/main/resources/application.properties
@@ -1,16 +1,8 @@
 #-------------------------------------------------------------------------------
 # Server Settings
 spring.application.name=spring-boot-fun
-env=dev
+spring.profiles.active=dev
 # http服务器端口
 server.port=7001
 # endpoint配置
 management.port=7002
-
-#-------------------------------------------------------------------------------
-# MySQL Settings
-jdbc.driverclassname=com.mysql.jdbc.Driver
-jdbc.url.ifun=jdbc:mysql://localhost:3306/ifun?useUnicode=true&characterEncoding=utf8
-jdbc.username.ifun=root
-jdbc.password.ifun=root
-init.ifun.sql=classpath:dbinit/init.ifun.sql
