--- a/spring-boot-fun-starter/pom.xml
+++ b/spring-boot-fun-starter/pom.xml
@@ -43,8 +43,15 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
-      <!--&lt;!&ndash; 解压fat jar到target/${project-name}目录 &ndash;&gt;
+      <!-- 解压fat jar到target/${project-name}目录 -->
       <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
           <executions>
@@ -62,7 +69,7 @@
                   </goals>
               </execution>
           </executions>
-      </plugin>-->
+      </plugin>
     </plugins>
   </build>
 
