--- a/spring-boot-fun-starter/src/main/resources/application-dev.properties
+++ b/spring-boot-fun-starter/src/main/resources/application-dev.properties
@@ -4,4 +4,4 @@ jdbc.driverclassname=com.mysql.jdbc.Driver
 jdbc.url.ifun=jdbc:mysql://localhost:3306/ifun_dev?useUnicode=true&characterEncoding=utf8
 jdbc.username.ifun=root
 jdbc.password.ifun=root
-init.ifun.sql=classpath:dbinit/init.ifun-dev.sql
+init.ifun.sql=classpath*:spring/dbinit/init.ifun-dev.sql
